--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,5 +1,3 @@
-<router-outlet></router-outlet>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,31 +8,49 @@
 </head>
 <body>
 
-<form>
-    <div>
+<h1>Cadastro de Produtos</h1>
+
+<form [formGroup]="formulario">
+    <div class="form-group">
       <label for="codigo">Código:</label>
-      <input type="text" id="codigo" name="codigo" [(ngModel)]="produto.codigo">
+      <input type="text" id="codigo" formControlName="codigo" class="form-control">
+      <div class="erro" *ngIf="formulario.controls['codigo'].invalid && formulario.controls['codigo'].touched" >
+        Código é obrigatório.
+      </div>
     </div>
 
-    <div>
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" [(ngModel)]="produto.nome">
-    </div>
-
-    <div>
-  <label for="descricao">Descrição:</label>
-      <input type="text" id="descricao" name="descricao" [(ngModel)]="produto.descricao">
-    </div>
-
-    <div>
-      <label for="valor">Valor:</label>
-      <input type="text" id="valor" name="valor" [(ngModel)]="produto.valor">
+    <div class="form-group">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" formControlName="nome" class="form-control">
     </div>
     
+  
+    <div class="form-group">
+      <label for="descricao">Descrição:</label>
+      <input type="text" id="descricao" formControlName="descricao" class="form-control">
+      <div class="erro" *ngIf="formulario.controls['descricao'].invalid && formulario.controls['descricao'].touched">
+        Descrição deve possuir no mínimo 20 caracteres.
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="valor">Valor:</label>
+      <input type="number" id="valor" formControlName="valor" class="form-control">
+    </div>
+  
+    <button type="submit" class="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
 
-    <button type="submit" (click)="cadastrar()">Cadastrar</button>
+    <div  *ngIf="isCadastrado" class="alertSucesso">
+      Produto Cadastrado!
+    </div>
 
-</form>
+    <div  *ngIf="isInvalido" class="alertFalha">
+      Erro, Produto não Cadastrado!
+    </div>
+
+    <button routerLink="/lista" class="btnLista" >Minha Lista</button>
+    </form> 
+
   
 
     
