--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -1,1 +1,38 @@
-<p>listagem works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Listagem</title>
+</head>
+
+<h1>Minha Lista</h1>
+<body>
+  <button routerLink="/">Voltar</button>
+  <table>
+    <thead>
+      <tr>
+        <th>Código</th>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th>Valor</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let produto of listaProdutos">
+        <td>{{ produto.codigo }}</td>
+        <td>{{ produto.nome }}</td>
+        <td>{{ produto.descricao }}</td>
+        <td>{{ produto.valor }}</td>
+        <td><button class="Excluir" (click)="removerItem(produto)">Excluir</button></td>
+      </tr>
+    </tbody>
+  </table>
+  <button (click)="removerTodos()">Remover Tudo</button>
+
+</body>
+</html>
+
+<router-outlet></router-outlet>
